[gd_scene load_steps=16 format=2]

[ext_resource path="res://characters/enemies/StaticEnemyTest/sprites/idle.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/StaticEnemyTest/sprites/attack.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/StaticEnemyTest/StaticEnemy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.5, 34 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36.5, 38.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34, 50 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -20, -11 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -20, -11 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=11]
states/attack/node = SubResource( 7 )
states/attack/position = Vector2( 80, 128 )
states/idle/node = SubResource( 8 )
states/idle/position = Vector2( 80, 36 )
transitions = [ "idle", "attack", SubResource( 9 ), "attack", "idle", SubResource( 10 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[node name="Static" type="KinematicBody2D" groups=["enemy"]]
scale = Vector2( -1, 1 )
script = ExtResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -54.5, 0 )
shape = SubResource( 2 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
modulate = Color( 0.0470588, 0.262745, 1, 1 )
position = Vector2( -36.5, -9.5 )
shape = SubResource( 3 )

[node name="ColisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -20, -11 )
texture = ExtResource( 1 )

[node name="Animations" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/attack = SubResource( 5 )
anims/idle = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../Animations")
active = true
parameters/playback = SubResource( 12 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="animation_finished" from="Animations" to="." method="_on_Animations_animation_finished"]
